# ProcessCache

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  build.rs  forkBug.c  gcc_empty_c.rs  hmmer_syscall_lines_that_matter.txt  minimalStracer.cpp  raxml_important_syscalls.txt  raxml_trace_and_cache_prep.sh  silly_rename.rs  simplest_ex_child.rs  simplest_example.rs
access_syscall_examples/: access_failed_access_denied.c
c_examples/: access.c  access_failed_file_doesnt_exist.c  child_does_one_failing_one_succ.c  empty_c  empty_c.c  empty_c_strace_out.txt  example  example.c  parent_fails_and_child_fails.c  two_successful_execs_should_panic.c  umask.c
c_examples/hardlinking_examples/: child_hardlinking_ex.c
c_examples/misc_c_examples/: empty_c  exec.c  fork_child_that_opens_file.c  fork_no_exec.c  mkdir  mkdir.c  wait.c  write_file2.c  write_file3
c_examples/multi_syscall_examples/: create_stat_opentrunc.c  create_then_stat.c  create_then_stat_then_append  create_then_stat_then_append.c  fail_excl_create_then_append.c  stat_openrd_stat_stat.c  unlink.c
cache/: cache
conflict_tracer/: Cargo.toml  main.rs
conflict_tracer/src/: clocks.rs  (+3 more)
conflict_tracer_app/: Cargo.toml
conflict_tracer_app/src/: getPid.c  main.rs
conflict_tracer_app/tests/: hello  hello.c  w
hardlinking_examples/: child_hardlinking_ex  parent_hardlinking_ex  parent_hardlinking_ex.c
make_false_dependency_example/: Makefile  one.c  two.c
minimal_tracer/: Cargo.toml
misc_c_examples/: base_example.c  cache_example.c  clone.c  exec_doesnt_exist.c  fail_fail_succeed_exec.c  file1.txt  file2.txt  file3.txt  fork_child_and_child_forks_too.c  fork_child_empty_c.c  fork_twice.c  loop_fork.c  omar_example.c  parent_reads_children_write  parent_reads_children_write.c  read_file1.c  stderr.c  waitpid.c  write.c  write_file1.c  write_file2  write_file2.c  write_file3  write_file3.c
mock_tracer/: Cargo.toml
mock_tracer/src/: blocking_event.rs  events.rs  lib.rs  mock_tracer.rs  process.rs  program.rs  system_call.rs
multi_syscall_examples/: create_stat_opentrunc  create_then_stat  fail_excl_create_then_append  stat_openrd_stat_stat  unlink
open_syscall_examples/: crazy_open_flags.c  creat.c  kellynewopen.c  open.c  open_for_read.c  open_wr_append.c  openat_for_write_append.c  openat_rd_fail_no_file_exists.c  openat_wr_failed_no_file_exists.c  openat_wr_failed_permission_denied.c
single_threaded_runtime/: Cargo.toml
src/: MockReactor.rs  actions.rs  args.rs  async_runtime.rs  background_threads.rs  cache.rs  cache_benchmarking.rs  cache_utils.rs  clocks.rs  command_ls.rs  computed_hashes.rs  condition_generator.rs  condition_utils.rs  coroutines.rs  execution.rs  execution_utils.rs  executor.rs  file_name.rs  handlers.rs  idk.rs  log.rs  main.rs  ptrace_event.rs  ptracer.rs  recording.rs  redirection.rs  regs.rs  seccomp.rs  syscalls.rs  system_call_names.rs  tracer.rs  util.rs  utils.rs
stat_examples/: fstat.c  just_stat.c  lstat.c  stat_failed_access_denied.c  stat_failed_file_doesnt_exist.c
tests/: mock_tests.rs  test_binutils.rs
tracer/: Cargo.toml
wait_executor/: Cargo.toml
(+26 files in other folders)
