[package]
name = "process_cache"
version = "0.1.0"
authors = ["gatowololo <gatowololo@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1"
crossbeam = "0.8.2"
libc = "0.2.133"
nix = "0.17"
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive", "rc"] }
seccomp-sys = "0.1.2"
sha2 = "0.9"
structopt = "0.2"
tracing = "0.1.25"
tracing-subscriber = "0.2"

[dev-dependencies]
# sha2 = "0.9"
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive", "rc"] }

# [[bin]]
# name = "get_all_syscalls_called_by_gcc"
# path = "./src/get_all_syscalls_called_by_gcc.rs"