[package]
name = "process_cache"
version = "0.1.0"
authors = ["gatowololo <gatowololo@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1"
crossbeam = "0.8.2"
lazy_static = "1.4"
libc = "0.2.133"
nix = "0.17"
rayon = "1.8.0"
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive", "rc"] }
seccomp-sys = "0.1.2"
sha2 = "0.9"
structopt = "0.2"
tracing = "0.1.25"
tracing-subscriber = "0.2"

[dev-dependencies]
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive", "rc"] }