[package]
name = "mock_tracer"
version = "0.1.0"
authors = ["gatowololo <gatowololo@gmail.com>"]
edition = "2018"

[dependencies]
nix = "0.17"
libc = "0.2"
log = "0.4"
async-trait = "0.1.21"
tracer = { path = "../tracer"}
single_threaded_runtime = { path = "../single_threaded_runtime" }

tracing = "0.1.10"
tracing-subscriber = "0.2.0-alpha.2"

# [profile.release]
# debug = true